# tiago_dual_simulation

tiago_dual_2dnav_gazebo/: CHANGELOG.rst  package.xml
tiago_dual_2dnav_gazebo/launch/: tiago_dual_mapping.launch  tiago_dual_navigation.launch
tiago_dual_controller_configuration_gazebo/: CHANGELOG.rst  package.xml
tiago_dual_controller_configuration_gazebo/config/: joint_trajectory_controllers.yaml  pids.yaml
tiago_dual_controller_configuration_gazebo/launch/: default_controllers.launch  tiago_dual_controllers.launch
tiago_dual_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
tiago_dual_gazebo/launch/: robot_spawn.launch.py  simulation_tiago_dual_bringup.launch  tiago_dual_gazebo.launch  tiago_dual_gazebo.launch.py  tiago_dual_spawn.launch
tiago_dual_gazebo/worlds/: two_cylinders_on_table.world
tiago_dual_simulation/: CHANGELOG.rst  CMakeLists.txt  package.xml
