<?xml version="1.0"?>
<package format="3">
  <name>tiago_dual_simulation</name>
  <version>2.3.9</version>
  <description>The tiago_dual_simulation package</description>
  <maintainer email="victor.lopez@pal-robotics.com">Victor Lopez</maintainer>
  <maintainer email="david.terkuile@pal-robotics.com">David ter Kuile</maintainer>
  <author email="victor.lopez@pal-robotics.com">Victor Lopez</author>
  <license>Apache License 2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>tiago_dual_gazebo</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
